# expert-system

./: README.md  create-db.sql  pyproject.toml  task.md  theory.md
app/: config.py  main.py
app/database/: connection.py  models.py  repositories.py
app/engine/: bayes_engine.py  diagnosis_filter.py  probability_service.py  symptom_selector.py
app/services/: diagnosis_service.py  session_service.py
app/ui/: debug_window.py  main_window.py
app/utils/: logger.py  math_utils.py
